@@ -42,6 +42,9 @@ shadow-4.0.18.1 -> shadow-4.0.18.2					UNRELEASED
 - su: Avoid terminating the PAM library in the forked child. This is done
   later in the parent after closing the PAM session.
 
+*** documentation:
+- Generate the translated manpages from PO at build time.
+
 shadow-4.0.18.1 -> shadow-4.0.18.2					28-10-2007
 
 *** general:
